# fwap

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  changelog.rst  chapter_map.rst  conf.py  index.rst  possible_extensions.md  quickstart.rst  roadmap.md  roadmap.rst
docs/notebooks/: cylindrical_biot_validation.ipynb
docs/notebooks/_data/: README.md
docs/plans/: cylindrical_biot.md  cylindrical_biot_F.md  cylindrical_biot_F_2.md  cylindrical_biot_G.md  cylindrical_biot_G_pp.md  cylindrical_biot_G_prime.md  cylindrical_biot_H.md
fwap/: __init__.py  __main__.py  _common.py  _plotting.py  anisotropy.py  attenuation.py  cli.py  coherence.py  cylindrical.py  cylindrical_solver.py  demos.py  dip.py  dispersion.py  geomechanics.py  io.py  lwd.py  picker.py  plotting.py  rockphysics.py  synthetic.py  tomography.py  wavesep.py
ideas/: Articles.docx  Mari1994.docx  Paillet1991.docx  Tang2004.docx  Thomsen2014.docx  Tsvankin2011.docx  Tsvankin2012.docx
tests/: conftest.py  test_anisotropy.py  test_attenuation.py  test_bench.py  test_cli.py  test_coherence.py  test_common.py  test_cylindrical.py  test_cylindrical_solver.py  test_demos.py  test_dip.py  test_dispersion.py  test_edge_cases.py  test_geomechanics.py  test_hypothesis.py  test_io.py  test_lwd.py  test_picker.py  test_rockphysics.py  test_synthetic.py  test_tomography.py  test_wavesep.py
